@@ -106,12 +106,17 @@
       <!-- <p>There is currently no separate development release.</p> -->
       
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.3.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.4.tar.gz"
       title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.25.4</a></div>
+    
+    <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.3.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
       Deskbar-Applet 2.25.3</a></div>
     
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.2.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
