@@ -89,6 +89,15 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    
+	    <h3>January 5, 2009</h3>
+	      <b>Unstable</b> version 2.25.4 released.<br />
+	      <ul>
+	      <li>Fixed #558858, Deskbar stops working when closing by 'x'</li>
+          <li>Fixed #564726, configure doesn't detect pygtk in alternative directories</li>
+          </ul>
+	      <a href="download.html">Download it</a>
+	      
 	    <h3>December 15, 2008</h3>
 	      <b>Unstable</b> version 2.25.3 released.<br />
 	      <ul>
