@@ -1,3 +1,9 @@
+2000-01-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.25.4 release
+
 2008-12-15	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
